recallable/tests/ui/derive_fail_enum_borrowed_fields.rs
use recallable::Recallable;

#[derive(Recallable)]
enum BorrowedEnum<'a> {
    Borrowed(&'a str),
}

fn main() {}
